...

        <LinearLayout
            android:id="@+id/buttonMatrix"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...

                <ImageButton
                    android:id="@+id/imageButton10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <ImageButton
                    android:id="@+id/imageButton18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <ImageButton
                    android:id="@+id/imageButton34"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <ImageButton
                    android:id="@+id/imageButton38"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <ImageButton
                    android:id="@+id/imageButton310"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <ImageButton
                    android:id="@+id/imageButton56"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <ImageButton
                    android:id="@+id/imageButton72"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <ImageButton
                    android:id="@+id/imageButton710"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <ImageButton
                    android:id="@+id/imageButton96"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <ImageButton
                    android:id="@+id/imageButton112"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <ImageButton
                    android:id="@+id/imageButton116"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

            <Button
                android:id="@+id/finalizeDrawButton"
                android:layout_width="115dp"
                android:layout_height="wrap_content"
...

            <Button
                android:id="@+id/elegirBiblio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Elegir de la Biblioteca" />

            <Button
                android:id="@+id/compartirBluetooth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Compartir por Bluetooth" />


...

                <Button
                    android:id="@+id/emplazar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Emplazar laberinto" />

            </LinearLayout>
...
