...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.carlos.wumpusproject.activity.MapsActivity"
    tools:layout="@layout/prueba" />

    <Button
        android:id="@+id/setRangeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:onClick="startAR"
        android:text="Iniciar Juego" />
...
